[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthsystemgrids"
version = "0.1.0"
description = "Grid generation and spatial operators for Earth system modeling with flexible NumPy or JAX.NumPy support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "meteorologytoday", email = ""},
]
maintainers = [
    {name = "meteorologytoday", email = ""},
]
keywords = [
    "earth-system-modeling",
    "grids",
    "meteorology",
    "oceanography",
    "climate-modeling",
    "cubed-sphere",
    "lat-lon-cap",
    "spatial-operators",
    "esmf",
    "remapping",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
viz = [
    "matplotlib>=3.5.0",
    "cartopy>=0.20.0",
]
netcdf = [
    "netCDF4>=1.5.0",
    "xarray>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipython>=8.0.0",
    "ipywidgets>=7.6.0",
]
all = [
    "earthsystemgrids[jax,viz,netcdf,notebooks]",
]

[project.urls]
Homepage = "https://github.com/meteorologytoday/EarthSystemGrids"
Repository = "https://github.com/meteorologytoday/EarthSystemGrids"
Issues = "https://github.com/meteorologytoday/EarthSystemGrids/issues"

[tool.setuptools]
packages = ["EarthSystemGrids"]

[tool.setuptools.package-data]
EarthSystemGrids = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=EarthSystemGrids --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "cartopy.*",
    "netCDF4.*",
    "xarray.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["EarthSystemGrids"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
